--- a/.github/workflows/publish-npm.yml
+++ b/.github/workflows/publish-npm.yml
@@ -1,8 +1,12 @@
 name: Publish Package to npmjs
 
-on: push
+#on: push
 #  release:
 #    types: [published]
+on:
+  push:
+    tags:
+      - 'v[0-9]+.[0-9]+.[0-9]+'
 
 jobs:
   build:
