--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hochleistungslabor/img-downscale",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "Downscale images",
   "scripts": {
     "lint": "eslint src tests",
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/hochleistungslabor/img-downscale"
+    "url": "git+https://github.com/hochleistungslabor/img-downscale"
   },
   "keywords": [
     "webpack",
